--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "16"
   },
   "dependencies": {
-    "@redux-devtools/extension": "3.2.2",
+    "@redux-devtools/extension": "^3.2.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
@@ -17,7 +17,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^5.0.0",
     "redux": "4.2.0",
-    "redux-thunk": "2.4.1",
+    "redux-thunk": "^2.4.1",
     "stylelint-order": "5.0.0"
   },
   "scripts": {
