--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "node-fetch": "^2.6.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "4.4.0",
@@ -51,6 +52,7 @@
     "cypress": "10.4.0",
     "cypress-multi-reporters": "1.6.1",
     "eslint-config-trybe-frontend": "^1.3",
+    "fetch-mock-jest": "^1.5.1",
     "jest-localstorage-mock": "2.4.21",
     "mocha": "10.0.0",
     "mochawesome": "7.1.3",
